# CodeDev

./: .gitignore  DEV_EN.md  Dev.md  README.md  USAGE.md  USAGE_EN.md  analysis.md  package-lock.json  package.json  screenshot.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: update-prompts.yml
models/: models.json
src/: App.tsx  ScreenshotApp.tsx  SpotlightApp.tsx  index.css  main.tsx  screenshot.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_engine.rs  db.rs  main.rs  monitor.rs  scheduler.rs  window_manager.rs
src-tauri/src/ai/: mod.rs  onnx_backend.rs  registry.rs  traits.rs
src-tauri/src/env_probe/: binaries.rs  browsers.rs  common.rs  identity.rs  ides.rs  mod.rs  npm.rs  scan_logic.rs  scanners.rs  system.rs  traits.rs
src-tauri/src/gitleaks/: allowlist.rs  mod.rs  rules_ai.rs  rules_cloud.rs  rules_package.rs
src-tauri/src/modules/screenshot/: capture.rs  mod.rs
src-tauri/src/rag/: database.rs  indexer.rs  mod.rs
src-tauri/src/security/: engine.rs  entropy.rs  mod.rs  rules.rs  stopwords.rs
src/components/features/context/: AIContextAgent.tsx  ContextPreview.tsx  ContextView.tsx  FileTreeNode.tsx  FilterManager.tsx  ScanResultDialog.tsx  TokenDashboard.tsx
src/components/features/hyperview/renderers/: MarkdownRenderer.tsx
src/components/features/monitor/: SystemMonitorModal.tsx
src/components/features/monitor/tabs/: EnvFingerprint.tsx  MonitorDashboard.tsx  NetworkDoctor.tsx  PortManager.tsx
src/components/features/patch/: CommitSelector.tsx  DiffViewer.tsx  DiffWorkspace.tsx  PatchSidebar.tsx  PatchView.tsx  patch_types.ts
src/components/features/patch/dialogs/: ExportDialog.tsx
src/components/features/prompts/: PromptCard.tsx  PromptDetailTooltip.tsx  PromptView.tsx
src/components/features/prompts/dialogs/: PromptEditorDialog.tsx  VariableFillerDialog.tsx
src/components/features/spotlight/core/: ChatCommandMenu.tsx  SearchBar.tsx  SpotlightContext.tsx  SpotlightLayout.tsx
src/components/features/spotlight/hooks/: useSpotlightChat.ts  useSpotlightSearch.ts
src/components/features/spotlight/modes/chat/: ChatMode.tsx
src/components/features/spotlight/modes/search/: SearchMode.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/screenshot/: CanvasLayer.tsx
src/components/settings/: AboutSection.tsx  KnowledgeBaseManager.tsx  PromptLibraryManager.tsx  SettingsModal.tsx
src/components/ui/: ClockPopover.tsx  CodeBlock.tsx  GlobalConfirmDialog.tsx  SearchEngineIcon.tsx  ShortcutInput.tsx  Toast.tsx
src/lib/: calculator.ts  command_executor.ts  comment_stripper.ts  context_analytics.ts  context_assembler.ts  fs_helper.ts  hooks.ts  i18n.ts  llm.ts  network.ts  patch_parser.ts  storage.ts  template.ts  tokenizer.ts  utils.ts
src/store/: useAppStore.ts  useContextStore.ts  usePromptStore.ts  useScreenshotStore.ts
src/types/: context.ts  model.ts  monitor.ts  prompt.ts  spotlight.ts
